--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          pip install -r ${{ github.workspace }}/requirements.txt
       - name: Analysing the code with pylint
         run: |
           pylint --reports=n --output-format=json --rcfile .pylintrc $(git ls-files '*.py')
+      - name: Analysing the code with black
+        run: |
+          black
