--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,9 @@
   "editor.detectIndentation": false,
   "editor.tabSize": 4,
   "editor.formatOnSave": true,
-  "cSpell.words": [
-    "fastapi"
-],
+  "cSpell.words": ["fastapi"],
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.defaultFormatter": "ms-python.black-formatter"
   },
-  "pylint.args": ["--rcfile",".pylintrc"]
+  "pylint.args": ["--rcfile", ".pylintrc"]
 }
