--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.11.1
+      - name: Setup Python
         uses: actions/setup-python@v3
       - uses: dorny/paths-filter@v3
         id: changes
