--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,10 +19,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ github.workspace }}/requirements.txt
-      - name: Analysing the code with pylint
-        if: steps.changes.outputs.py == 'true'
-        run: |
-          pylint --reports=n --output-format=json --rcfile ${{ github.workspace }}/.pylintrc ${{ steps.changes.outputs.py_files }}
+      # - name: Analysing the code with pylint
+      #   if: steps.changes.outputs.py == 'true'
+      #   run: |
+      #     pylint --reports=n --output-format=json --rcfile ${{ github.workspace }}/.pylintrc ${{ steps.changes.outputs.py_files }}
       - name: Analysing the code with black
         if: steps.changes.outputs.py == 'true'
         run: |
