--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: changes
         with:
+          list-files: shell
           filters: |
             python:
               - added|modified: '*.py'
