--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,10 +21,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ${{ github.workspace }}/requirements.txt
       - name: Analysing the code with pylint
+        continue-on-error: true
         if: steps.changes.outputs.python == 'true'
         run: |
           pylint ${{ steps.changes.outputs.python_files }} --rcfile ${{ github.workspace }}/.pylintrc
       - name: Analysing the code with black
+        continue-on-error: true
         if: steps.changes.outputs.python == 'true'
         run: |
           black ${{ steps.changes.outputs.python_files }} --diff --color
