--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,5 @@
 [MESSAGES CONTROL]
 
 disable=missing-function-docstring,
-        missing-module-docstring
+        missing-module-docstring,
+        missing-class-docstring
