--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,13 @@
   "editor.detectIndentation": false,
   "editor.tabSize": 4,
   "editor.formatOnSave": true,
-  "cSpell.words": ["fastapi"],
+  "cSpell.words": ["fastapi", "Pydantic"],
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit"
+    }
   },
+  "isort.args": ["--profile", "black"],
   "pylint.args": ["--rcfile", ".pylintrc"]
 }
