--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.114.0
 fastapi-cli==0.0.5
+flake8==7.1.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -25,10 +26,11 @@ mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.2
+pycodestyle==2.12.1
 pydantic==2.9.1
 pydantic_core==2.23.3
+pyflakes==3.2.0
 Pygments==2.18.0
-pylint==3.2.7
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
