--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 astroid==3.2.4
+bandit==1.7.9
 black==24.8.0
 certifi==2024.8.30
 click==8.1.7
@@ -25,6 +26,7 @@ mypy==1.11.2
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
+pbr==6.1.0
 platformdirs==4.3.2
 pycodestyle==2.12.1
 pydantic==2.9.1
@@ -38,6 +40,7 @@ rich==13.8.1
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.38.5
+stevedore==5.3.0
 tomlkit==0.13.2
 typer==0.12.5
 typing_extensions==4.12.2
